--- a/lietotnes.html
+++ b/lietotnes.html
@@ -25,7 +25,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
             <tr>
                 <th> Pomodoro metode </th>
                 <th> <p>Pomodoro tehnika ir veids, kā pārvaldīt savu laiku, izmantojot noteikta laika darba sesijas, kam seko pārtraukumi.</p><p> Mērķis ir strādāt 25 minūtes un pēc tam paņemt piecu minūšu pārtraukumu.</p> <p>Pēc četrām sesijām jums tiek piešķirts 15-20 minūšu pārtraukums.</p> </th>
-                <th> <a href="https://pomofocus.io/"> Pomodoro taimeris </a> </th>
+                <th> <img src="pomodoro.png" style="width:60px;height:90px;"> <a href="https://pomofocus.io/"> Pomodoro taimeris </a> </th>
+           </tr>
             <tr>
                 <th> Darba izvērtēšana un prioritizēšana </th> 
                 <th> <p>Darba izvērtēšana ir rīks, kas palīdz organizēt uzdevumus un noteikt prioritātes pēc steidzmības un svarīguma. </p>
@@ -39,7 +40,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                     <p> Darba dienu sadala blokos, un katr bloks ir veltīts  tikai noteikta uzdevuma izpildei. </p>
                     <p> Izmantojot šo tehniku, svarīgi ir pieturēties tikai pie konkrētā darba izpildes, neiesākot citus uzdevumus. </p>
                 </th>  
-                <th>  <a href="https://todoist.com/productivity-methods/time-blocking"> Informācija par rīku </a> </th>
+                <th> <img src="blocks.png" style="width:90px;height:60px"> <a href="https://todoist.com/productivity-methods/time-blocking"> Informācija par rīku </a> </th>
                 </tr>
         
         </table>   
