--- a/lietotnes.html
+++ b/lietotnes.html
@@ -44,7 +44,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                 </tr>
         
         </table>   
-        
+        <p>
+        Izmantotie resursi: <a href="https://www.coursera.org/articles/time-management" target="_blank"> LINKS </a>
+       </p>
         <a href="index.html">Laika plānošanas lietotnes</a>
     </body>
 </html>
