--- a/marketings.html
+++ b/marketings.html
@@ -49,7 +49,37 @@
                     <div class="card h-100">
                         <div class="card-body">
                             <h2 class="card-title">Card One</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.
+                                   <span id="dots">...</span>
+                                <span id="more">Tincidunt mauris nibh metus cum, eleifend lorem varius conubia sit.
+
+Gravida porta aptent cursus feugiat natoque laoreet hendrerit felis ridiculus.
+
+Augue imperdiet mi sem sit inceptos sapien sit viverra sapien.
+
+Sollicitudin ornare placerat ante dictumst nec lobortis mauris litora imperdiet.
+
+Laoreet ipsum in odio risus ut luctus purus, fermentum fusce!
+ </span> </p>
+ 
+    <button onclick="myFunction()" id="myBtn" > More Info </button>
+    
+    <script>
+        function myFunction() {
+        var dots = document.getElementById("dots");
+        var moreText = document.getElementById("more");
+        var btnText = document.getElementById("myBtn");
+        if(dots.style.display === "none") {
+            dots.style.display = "inline";
+            btnText.innerHTML = "Read more";
+            moreText.style.display = "none";
+        } else {    
+            dots.style.display = "none";
+            btnText.innerHTML = "Read less";
+            moreText.style.display = "inline";
+        }
+        }
+    </script>
                         </div>
                         <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
                     </div>
